--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Anderes</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="http://www.goethe.de" target="blank">Das Goethe-Institut</a>
-                            <a class="dropdown-item" href="http://www.dw.de" target="blank">Nachrichten</a>
+                            <a class="dropdown-item" href="https://www.duden.de/" target="blank">Duden</a>
+                            <a class="dropdown-item" href="https://www.goethe.de" target="blank">Das Goethe-Institut</a>
+                            <a class="dropdown-item" href="https://www.dw.de" target="blank">Nachrichten</a>
                         </div>
                     </li>
                 </ul>
@@ -114,6 +115,18 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div id="div_content">
+
+<div class="alert alert-danger" role="alert">
+  <h4 class="alert-heading">die Kartoffel <small>(patata)</small></h4>
+  <p>Substantiv, feminin – 1. krautige Pflanze mit gefiederten Blättern … 2. essbare Knolle der Kartoffel; 3. knollige Nase.</p>
+  <hr>
+  <p class="mb-0"><strong>Beispiel:</strong> Kartoffeln, Kartoffeln haben 48 Chromosomen. Haben Sie das gewusst?</p>
+  <hr>
+  <p class="mb-0"><strong>Plural:</strong> die Kartoffel(n)</p>
+  <hr>
+  <p class="mb-0"><strong>Genitive:</strong> n.a.</p>
+</div>
+
                                 
                             </div>
                         </div>
@@ -131,7 +144,7 @@
         <script src="content/lib/jquery-3.5.1.slim/jquery.min.js"></script>
         <script src="content/lib/popper-1.11.0/popper.min.js"></script>
         <script src="content/lib/bootstrap-4.5.0-dist/js/bootstrap.min.js"></script>
-        <script src="resource/list.json" id="json_list" type="text/javascript"></script>
+        <script src="resource/de/list.json" id="json_list" type="text/javascript"></script>
         <script>
             // Bootstrap 4 Typeahead
             $.fn.typeahead = function(params = {}) {
